--- a/Flask/GreatNumberGame/templates/answer.html
+++ b/Flask/GreatNumberGame/templates/answer.html
@@ -13,7 +13,7 @@
             <h1>Welcome to the Great Number Game!!</h1>    
         </div>
         <div class="container p-5 my-5 bg-white text-black text-center w-100">
-            <p class="display-6">I am thinking of a number between 1 and 10</p>   
+            <p class="display-6">I am thinking of a number between 1 and 100</p>   
         </div>
         
             {% if guess == True %}
@@ -24,9 +24,17 @@
                     </form>
                 </div>
             {% else %}
-                <div class="container p-5 my-5 bg-danger text-white text-center w-75">
-                    <h1>Wrong!</h1>    
-                </div>
+                {% if lower == True %}
+                    <div class="container p-5 my-5 bg-danger text-white text-center w-75">
+                        <h1>Too Low!</h1>    
+                    </div>
+                    
+                {% else %}
+                    <div class="container p-5 my-5 bg-danger text-white text-center w-75">
+                        <h1>Too High!</h1>    
+                    </div>
+                    
+                {% endif %}
                 
                 <div class="justify-content-center w-25 p-3 text-center mx-auto display-6">
                     <form method="post" action="/guess">
