--- a/FlaskMySQL/Crud/Users/templates/new_user.html
+++ b/FlaskMySQL/Crud/Users/templates/new_user.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="text-center my-5">Create New User</h1>
-    <div class="container-sm" style="width: 500px">
+    <div class="col-6 mx-auto">
         <form action="/user/create" method="post">
             <div class="mb-3">
                 <label for="first_name" class="form-label">First Name:</label>
