--- a/FlaskMySQL/Crud/Users/templates/index.html
+++ b/FlaskMySQL/Crud/Users/templates/index.html
@@ -17,6 +17,7 @@
                     <th>Last Name</th>
                     <th>Email</th>
                     <th>Created At</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -26,13 +27,18 @@
                     <td>{{user.last_name}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.created_at}}</td>
+                    <td>
+                        <a href="/user/show/{{ user.id }}">Show</a> |
+                        <a href="/user/edit/{{ user.id }}">Edit</a> |
+                        <a href="/user/destroy/{{user.id}}">Delete</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody> 
         </table>
         
         <div class="d-grid">
-            <a href="/user/new" class="btn btn-primary"> New User</a>
+            <a href="/user/new" class="btn btn-primary"> Add a User</a>
         </div>
     </div>
 </body>
