--- a/FlaskMySQL/Crud/burgers/flask_app/templates/index.html
+++ b/FlaskMySQL/Crud/burgers/flask_app/templates/index.html
@@ -29,6 +29,11 @@
             <label for="calories">Calories:</label>
             <input type="number" min="0" name="calories" id="calories" class="form-control">
         </div>
+        <select name="restaurant_id">
+            {% for restaurant in all_restaurants %}
+                <option value={{restaurant.id}}>{{restaurant.name}}</option>
+            {% endfor %}
+        </select>
         <input type="submit" value="Create Burger" class="btn btn-primary btn-outline-dark">
     </form>
 </body>
